# KROWN

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  COMMUNICATION.md  INSTALLER_MINGW_RAPIDE.ps1  INSTALL_MINGW.md  INSTALL_MINGW_MANUAL.md  LICENSE  LOGGING.md  QUICKSTART.md  QUICK_FIX.md  README.md  README_BACKEND.md  SETUP_RUST.ps1  SOLUTION_RAPIDE.md  TROUBLESHOOTING.md  docker-compose.yml  package-lock.json  package.json
agent/: .gitignore  COMPILE.md  Dockerfile  Makefile  krown-agent.service
agent/src/: main.c  request_handler.c  socket_server.c  ssh_handler.c
backend/: .gitignore  ARCHITECTURE.md  CHECK_SETUP.ps1  Cargo.toml  EXEMPLE_MINIMAL.md  INSTALL_RUST_WINDOWS.md  LANCER_BACKEND.ps1  README.md  config.toml.example
backend-node/: .gitignore  Dockerfile  agent-client.js  generate-certs.sh  https-server.js  package.json  server.js  test-agent.js
backend/src/: api.rs  auth.rs  config.rs  database.rs  error.rs  logging.rs  main.rs  models.rs  server.rs  ssh.rs  websocket.rs
frontend/: .dockerignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  index.html  nginx-https.conf  nginx.conf  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx  (+12 more)
scripts/: check-backend.ps1  example_connect.sh  generate_ca.sh  install-backend.ps1  request_cert.py  request_cert.sh  run-backend.ps1  setup-rust-gnu.ps1  verify_setup.sh
(+3 files in other folders)
